# ChangeLog for net-wireless/wireless-regdb
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-wireless/wireless-regdb/ChangeLog,v 1.44 2013/11/27 21:59:13 zerochaos Exp $

*wireless-regdb-20131127 (27 Nov 2013)

  27 Nov 2013; Rick Farina <zerochaos@gentoo.org>
  +wireless-regdb-20131127.ebuild:
  version bump

*wireless-regdb-20131011 (11 Oct 2013)

  11 Oct 2013; Rick Farina <zerochaos@gentoo.org>
  +wireless-regdb-20131011.ebuild:
  bump

  31 Mar 2013; Agostino Sarubbo <ago@gentoo.org> wireless-regdb-20130213.ebuild:
  Stable for sparc, wrt bug #463136

  28 Mar 2013; Agostino Sarubbo <ago@gentoo.org> wireless-regdb-20130213.ebuild:
  Stable for arm, wrt bug #463136

  27 Mar 2013; Agostino Sarubbo <ago@gentoo.org> wireless-regdb-20130213.ebuild:
  Stable for ppc64, wrt bug #463136

  26 Mar 2013; Agostino Sarubbo <ago@gentoo.org> wireless-regdb-20130213.ebuild:
  Stable for ppc, wrt bug #463136

  26 Mar 2013; Agostino Sarubbo <ago@gentoo.org> wireless-regdb-20130213.ebuild:
  Stable for x86, wrt bug #463136

  26 Mar 2013; Agostino Sarubbo <ago@gentoo.org> wireless-regdb-20130213.ebuild:
  Stable for amd64, wrt bug #463136

*wireless-regdb-20130213 (14 Feb 2013)

  14 Feb 2013; Rick Farina <zerochaos@gentoo.org>
  +wireless-regdb-20130213.ebuild:
  bump

  02 Feb 2013; Rick Farina <zerochaos@gentoo.org>
  wireless-regdb-20130111.ebuild:
  upstream moved locations, and I prefer XZ while we are at it

*wireless-regdb-20130111 (19 Jan 2013)

  19 Jan 2013; Rick Farina <zerochaos@gentoo.org>
  +wireless-regdb-20130111.ebuild:
  first bump in a while, very exciting

  06 Jan 2013; Agostino Sarubbo <ago@gentoo.org>
  wireless-regdb-20110428-r1.ebuild:
  Add ~sparc, wrt bug #449220

  01 Jan 2013; Agostino Sarubbo <ago@gentoo.org>
  wireless-regdb-20110428-r1.ebuild:
  Add ~alpha, wrt bug #449220

  01 Jan 2013; Agostino Sarubbo <ago@gentoo.org>
  wireless-regdb-20110428-r1.ebuild: