@@ -1,0 +1,9 @@
+DEFINED_PHASES=compile install
+DESCRIPTION=Binary regulatory database for CRDA
+EAPI=5
+HOMEPAGE=http://wireless.kernel.org/en/developers/Regulatory
+KEYWORDS=~alpha ~amd64 ~arm ~ia64 ~mips ~ppc ~ppc64 ~sparc ~x86
+LICENSE=ISC
+SLOT=0
+SRC_URI=https://www.kernel.org/pub/software/network/wireless-regdb/wireless-regdb-2013.11.27.tar.xz
+_md5_=64552dbc07bcfb8768e2e9ed1200ccfe
