@@ -6,6 +6,6 @@ IUSE=build kernel_linux
 KEYWORDS=~arm ~arm-linux ~ppc-aix ~x64-freebsd ~x86-freebsd ~hppa-hpux ~ia64-hpux ~x86-interix ~amd64-linux ~ia64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~m68k-mint ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris ~x86-winnt
 LICENSE=GPL-2
 SLOT=0
-SRC_URI=mirror://gentoo/baselayout-2.2.tar.bz2 http://dev.gentoo.org/~vapier/dist/baselayout-2.2.tar.bz2 http://dev.gentoo.org/~grobian/distfiles/einfo-1.0.5.tar.xz
+SRC_URI=mirror://gentoo/baselayout-2.2.tar.bz2 http://dev.gentoo.org/~vapier/dist/baselayout-2.2.tar.bz2 http://dev.gentoo.org/~redlizard/distfiles/einfo-1.0.6.tar.xz
 _eclasses_=eutils	40081e8c7e7f7c4f9db349a1d6d52925	libtool	b9b3340e3a19510f0d9f05cfccbf209f	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=454cb81d275ece62e09a47618ab73cb3
+_md5_=06d108c3246dd329629b8ecf71477cd7
