@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 DIST wireless-regdb-2009.01.15.tar.bz2 9951 SHA256 5272fa06f4ca30a8f87bfe6268920ab75cf1fb27c2fd1d27d324201b079f24ad
 DIST wireless-regdb-2011.04.28.tar.bz2 13189 SHA256 ed1c3e134e34ba5f93594f6f76b90861fe8d24359c064839a2bb78736416642b SHA512 646cf1724494e5b08181f8f1e8abab762039964ba34a62172b38590328815d27d779474620c9f4ce62a26ae077cb9e0bde1fbae5121540dece32b91fe0f86f6c WHIRLPOOL a7d07b5ad357c682606188681fbaf278944e91234fa8c55c3f92d739ac2f26f3b7ae79bbb677cda0972c8d578844c33a914a5142219dd978988251669682303c
@@ -12,23 +12,24 @@ EBUILD wireless-regdb-20110428-r1.ebuild 935 SHA256 abaf939166c3c184aa7fb6d4b57f
 EBUILD wireless-regdb-20130111.ebuild 948 SHA256 a96f84497ed75b9dc7554a6902d2fcacd14c62ac62b3ca716e9fde090172dbdf SHA512 e808b0806ecb3c21ac534f601c1e406ac381b8ead5c372cb3a0afb9231fdc31b9cb7526fc964303238e062541bfb71bda04228e1960d4e875beff90ef69eaa16 WHIRLPOOL 8d6d903195adcd6871dadc176228bc0a4838707916d302490624718a2882f81f623527dcf04c8e79e041c2d24966c430a10478544d297a7fe5f69c38c534c145
 EBUILD wireless-regdb-20130213.ebuild 936 SHA256 d086dd61263fbfd9c7084cd4c7e177f5a85c81d062840ab852392b1839adb53f SHA512 a7136bb03ee38b70ec09113742282a86c883ebf90c751cf55ceeb6c11295fa332f3f9841d63c36e50755c5a33065672f58308114562ed9e4a2686e5bce08b2ce WHIRLPOOL a06ffc7165fd8ec1dec3f5943c9f47fa9f2aa80cc69db1599655b88471dbc8f5ba66ceb985739acf49bc63db6ac537d363bf3f8451b59e89fcb29aee65d1fe6a
 EBUILD wireless-regdb-20131011.ebuild 948 SHA256 60b6415ff599ab60c94fa5e09ac4173fd9b0a13e63a2032b5e207d287d5d483f SHA512 cad95d41aaf22bb56df4e56ae098b912510b8f7c497bfe0da9541aed95e9bb211c4571e717e5dfa4608023f2882b7b2c146773b694e1569ea90ec1d648a94b0c WHIRLPOOL 392a3c91bc3a9d4cfaeb8ea99c68f7b00d69f4507e97fe80e8cbcdd9fa2d584439f14994d4a9c7dd06727f16a3db077b1eb5fd469caedd1a2296910e1e4d6370
+EBUILD wireless-regdb-20131127-r1.ebuild 1057 SHA256 a7922e1aeb955d337ffde43e03c5dda1cf59db8d52f48b28095acbf457d45028 SHA512 97a83f228c594aee853716f78302ae456bc55cfcc591273b52b66d3240cba3bb16d0e801b2174eea654777f360645a9217fdf3695f097ebf084f1b7df0531af9 WHIRLPOOL 72e40b30599370074f25c22e1d19031cc85c4a393354ef34e4683269ca923077f87a8eb4fea0d21dbf25253cc205bcd244f82fac19460a2d9861b5ae7c3d2204
 EBUILD wireless-regdb-20131127.ebuild 948 SHA256 3200c3ae71226eee61902a4520a2331aee748eb4e9e57c67e7a7583701d41e73 SHA512 47b65286277bb8b1ac47cd85301b5f90c1d9b0a3966e8a0969cb4c82b68db5de773588c074106463b769eb97dbf5c0fc0a1d4f8700b7bf450bbcccb521bee3c3 WHIRLPOOL 040ba3578291031c78d37d3fae0e4a1faf777b746fdb022a4b388193609be7e4464c172b81142ce0dc5d96301f449ae280957835a7dd8e5e3e870cc8863025e9
-MISC ChangeLog 7551 SHA256 fb7ba679fbb6179d30c02cfa95cc2be89fbd0dbc76ed7f40c9c4b51fb5186b2e SHA512 f956f166fca5a8d4a6a135c297db19ed26e5d545540491b81b08e53c3e7de093803116c2c05a6ac5395cb745da09edf2eb448285b8687eea2fd763afe5f3306f WHIRLPOOL 8b0d7e8b6e8bf0ccae78bfd15097c1505f5af63ffea686bbf23e1e96212c116648238f99cdd0f723389e26ee07e10368c300ac5b5ded622fbe84f5d6b803e4e9
+MISC ChangeLog 7739 SHA256 116579018701a130bec7edf9f980258823ab29d299f7e8b4912db5a0a366a132 SHA512 03acbf4cad792be0fd113ec29cf69025a4f55420279ca8e12117263f0b032ba22d2dd51e96c74a263f665de805eca9a7477fb072c604379c82a1ffc8f996410c WHIRLPOOL d1bcc15356ff52292dd73207b3a532851a972eedd96bd59f884842354dde6a75c7d9f80f81867f97011d8ec6e8e9fa40a2917721c044e29585e83e7741ab16b9
 MISC metadata.xml 430 SHA256 f74544338c4488cc7398cc96b15525ce5401c8cac930aa10a7928972bef850a2 SHA512 19c09c96443fded2d46bc9807feff55152d18f253d0bb4809bcf69df14cadd89a1e515ae5d987f01843b889fe4ca6457fae4ba45d5db2b810b143f35f85afeb0 WHIRLPOOL e26f0751ac3d968c61f9b5accb8849399dffa61f1ee06112021f2800338b804852dbbef0bf92422b03fbb51d28015c572c4ec14aadb2bdf3fa4b98b9a0288410
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCgAGBQJSlmt1AAoJEKXdFCfdEflKjoIP/2ofXnJegHLvucNLKRxUHJSy
-OlmQkHWjvbwl/zJDIM2Jwtp9J0m47vVOhhuw2WHxZ95Bo2SqchYGmzH4RJlSQyEp
-JTAO3RCV6vARVcf12Jw70gEb1hH/CpZh9ozesMHkjaAFUibztNY4DYDBiB5H6LWb
-MBex7o6uqeo+irxS/lhki0yaRrfKPJVEwzYTUXA7yTImTQZCILuCE9XiPJp8tM6c
-9f9up450DJlJNWj7xa4MY/bj0HvX0qupDmKMeaatyXdnkrTqqpRmGCd9ne6NCPU0
-8rVf41u56co6NrY09v2rmDSJ1ETflFEk6gFcBJDCetojvI1m1kD96wdl0Rv9G0sC
-2UA0es+a0DP55378cjgnwrtRra6QPfCa2PKSBUxDEqf/w3laDsbrzeIIOyEauGgp
-9JrhXaXN4KqThegaNVBINTluaszQis3timSwxBlipnbwk58KtWnjAWvcxP+9nPHN
-YYigWRXCiiRj7etA8KkBdH4S0CyS1HHIwujNxRcR4d9mD1Z46ZJ6CRaPWLKCZ6Ug
-sMBQmOTxRWQDJwB/+YkJWRhxKzL3mtQ1qeS7J88F0uqgrB0SyqGrLOEIhVFRzdnX
-PB5NKmFletBfZDX7p98x//wVu10XQzTgwZ/UqQ/roD29QwRUeIT3QZMqm+BVs1Xj
-6T/LZD/pO/PcTwFHfaHK
-=d74N
+iQIcBAEBCAAGBQJS+8wlAAoJEPGu1DbS6WIAu00QAIYu2NXVEQHtO000yeWcB6YH
+zqdT8PQNf5t40HVbqoxlTJ9Wbg4KaaYfit1kMyx51uh44f4x1EFdOHxWXCCwa0uy
+/gFRJOQjG6Hnzhl9/yJTxwdytwH1yL0zn6obmaQy77UKtwHh19M+e+Qaw06BnwV/
+mGTNPNSNcV2OfQhCDHRHEBC1hv85AHcaWiFpcQu2MLLo7oS2UiO8FVUdtAMoT8Xl
+/227zuNhZYepFUXUSxEcJ8Px55GqOBycNx/6ZIXjZFEV1bTfgSwa4CNuSEv9KlxA
+cOQNEXlSl+G9GLsnF5d0kQmPYthQyGmqJx5E22Tmnn7QXkMqnJoK5ngvGpqHE/yQ
+Oy0bib2FUe1FEen4crVJg3k/BJawdcmtiaVodkjeTdT1prhWu70UTakaM/QVTXN6
+Vqmk5vSoj0s4gUdBd7j9z0fD4UXeabeSXkFAXNuNwfdxrarIB1ueS6O9Uy0H8Ztu
+8ddwDaamrYKsmwb/qAvgVmwIAFrZPiTuj1QZc4Wo9XvgNUBo6z+LW+AoYjgyCITM
+TC/tf4mrba6BduB1nFQkymvtLzO+HinhTO5vYJToo80hA9+/F1VsGKk8Zo2KE7Xh
+c4hzcd5H5fiwggwX2fBU2QFHZfbYmeAavk9BYQAGXNiYWcQx4HWKkvaHz+ts6bN7
+H//fN5aflhGBb0AXohEj
+=fh97
 -----END PGP SIGNATURE-----
