@@ -22,17 +22,27 @@ AUX einfo-1.0.4-termcap-check.patch 2197 SHA256 5282414571cecc412ca0324e336394bd
 DIST baselayout-2.2.tar.bz2 40744 SHA256 11d4a223b06da545c3e59e07c9195570f334b5b1be05d995df0ebc8ea2203e98 SHA512 a5199c42e835d9f2683cc94f3c4c47ecdc392316c24e0932845736e2e90479b0c5c8ad72ead8e0537f097405b7d7548d00b87b7ff8c9e3651486e3c5c0970b36 WHIRLPOOL 60cc4f7f76c5a45c15303e526decffb3bad2b50ac659b1dd072d2ed4b0eb0b31929a1a733ddb03a31ee5882b889a4efb87206f63ffaa2b11e26d36afd0933a95
 DIST baselayout-prefix-1.12.14.1709.tar.bz2 461562 SHA256 ca1eec028b7ec72f1e3196f71eafd564062d9b677569698fe41ac5f817c9379e SHA512 600cf1a90771deb0f1d2be73dc2b6fbd0708c8b19e4b300a95cb5e5431be05904864cbcf8cd87dd3aefa5827fc8c3324d5249496a37a84ea2f676a25447f5b9e WHIRLPOOL 872f02fa0e4920c1c6fadbfeeee19d52ab1a2ccce32b0eb52e245dc71767cf31110c063946163bc171d6085a50867f74936c397fd6fdf8e9e30b146b06dc8926
 DIST baselayout-prefix-1.12.5.1701.tar.bz2 412843 SHA256 452ee800e37c65d9c44e77130f0ea9f082e05df2f9a673523fe2e03170fa3099 SHA512 87d73943a9210c2ab613a60bed1197fa92fe536bde870f97e28aaa6cbc432d2c94b507f9a78011c2b7e92a09612267c3d23a540bdb5677a836d6dc845af0858b WHIRLPOOL 4a678f1b150a48c85507a09dce57572b98eb7f2c4e22bb57294cc653e7ac896281ed255f39ecc6c45e3a1ddd385ffded1eaec9b3b0412b62320f0e997e8a84ec
-DIST einfo-1.0.5.tar.xz 218584 SHA256 9fce482450baa5ba0aa6d73409a29897ab399e9184ac80c4204bf141896a58ce SHA512 195df1f9df0ad464721338a0687c0abec4863fbe558832213946310b51640dd7f3eb451ace16bf20f2e0da7593eaaaf7d8872ee363e16046cd33e730847c5e2b WHIRLPOOL 201c7ebb5a5573528822f4d6eaf55ef66ff9ca9fdce2e33edd8b4a10d5fd7a7d6f955342443dca6d95d11fd89b1ac1c56df1b43f3c99932461249d0e0ae36c8f
+DIST einfo-1.0.6.tar.xz 222368 SHA256 036108a6160c0a5468483e94effc2665d2028b6c64ea22ec607117cbaec564d6 SHA512 d9fabb11621b3ab49aaa0ad318ee6f511ee09d2a4de1cce7da1c3e0b1f8cb9a3b2f5d446f7e6d7b662a21955178ed89cc4c212382aac66d40a774f42f9a53738 WHIRLPOOL ec7bd03ac6f10205f8405fa0c4907af748a95727bb0a3fa20024a5fd215cb19e9eeebabcdba4be4710962d170bd96c47e03258e0f5b03e98449c90a32d0dedf0
 EBUILD baselayout-prefix-1.12.14-r1.ebuild 4409 SHA256 203165f570642665971db9426fa909cfe7177f58ce272924199dd2ee6a8ea8c3 SHA512 693c9cb39f9879150bbf43e1ababfaed1e7d3aefee41d8e2b8f19bb748dcac0c2dca58faa0af83d4b9aa39ddab20fbde91bf1da2e8fba54d84fb5e50ed84f00b WHIRLPOOL 087a8e45ab23a2048aa8ea95efd990811d99e77fa3a9f6eca755dd1559868858e3a21f66603ec583daf82cba847a00865b15b9b1ff4a2acf66eb0e0c94f614c9
 EBUILD baselayout-prefix-1.12.14.ebuild 5389 SHA256 083974adb065d0205f588ebcab5013bf379cecce17b31a86a198edd7d8177658 SHA512 aea398e212550284dca9a06a4d78e0c72b77910c29fcb3582129635624c3dae2bad87f4ab8a5cd8c93ffa16d39e11fe0d7841b0570777f5569ae5442a4b514b3 WHIRLPOOL 679c3d017891a85cd0ad8fa1c5540355cbb2b0fe3f86ea47dca86f225c4073ca510c44c4b1117c2926d09102b97eaef86d7cd714aec2c8941888e3a5a4411014
 EBUILD baselayout-prefix-1.12.5-r11.ebuild 5261 SHA256 0c646a03af85f78ed81fee96050621e1f5b09e3e2155c69bb883fcf6b9d8346d SHA512 ebbfc991734ffbf98ce46c985acda7f8fe0b52218ef35f8e03bbbcfc5f5cb9089badf40c8ecee93dda115956b18965a26729382185a813e138c79d269deae174 WHIRLPOOL 77b94032b729005983296f12bb1e7013db898c9f7e46d6fb89da1aa49b5faa64dbd5adfc71c882650983cc28889d62e34aa992b94612f721a48aebbcf0f06d83
-EBUILD baselayout-prefix-2.2-r3.ebuild 3241 SHA256 5c8849b5de12136a9ccc37a180e1cb8c83badd41db8e05539487f1a463fff244 SHA512 bdff777516d9aefc606fc2762e8c7919b2f0cc943671a29ca56d0cb32265d9e92e0aab80b52cfe347cad1ea2e456a8fa40dd78688be1ea6d1892638a19dc58fc WHIRLPOOL dc4c34aa33b4ef8b8f623614e0490ae88e5480538f31bdfa44c59afc24c2bec675b588a8852c783a8cdf87c00df3ef574fa84160455f4c204fe15de9fdef42ce
-MISC ChangeLog 11449 SHA256 699536f9da1259649a503869e643282adaa94fd99372dd2a8db36d0ae7848ec0 SHA512 c8fbdd1119e09146a75b3b2ca8fd1ecfcb2edbacd010e1bc97fb8b055909e00a99d7bb7fdeeeba8c24604b618791f381f0185d7a7cf9c841a581a2a530f3699c WHIRLPOOL a8a129ed9d668c5041e87dbbe3817d6c9710a422a4352166b387359bf93c4062daa9fd1d4397ff84a267c0b3086615cc344f5d2170036308c9e2446ecf559ea8
+EBUILD baselayout-prefix-2.2-r3.ebuild 3245 SHA256 970753807c8278fe61bec0e59baae3244dcb5c6b4c13e0a48f201bafb9e2a340 SHA512 987064d2752406d7ef49d1a2f796234243202bfb5b924e321c58de9b958cce421933c7a4cc1c91b80768a855784525ab4a79a24cfecd9fe59e00ad57619bb6bf WHIRLPOOL 86751f0e30ca38868a7db7dc8e97bcd257f973246668c05587ace224f1a39774be559e6bfc9aa8ddb6da4f95a4388909c076b3e087ac44b5ec15496358058c0e
+MISC ChangeLog 11614 SHA256 8a07944ffd432210d2f065bd40f829f2ec2c0306ee6be1b67193a391940854c8 SHA512 72fe6d0e17ef99648fc01f2c8194f8ece456225b7a79d2b539d68c7b32d32ae69ffd613045488c8079a868db2a2c7fa35e767da61b32a6b809a3ebc25eb0fe57 WHIRLPOOL b166714707f95f3cb797894c955ee717449a75f763afcf5f7a33a935a49cce6fb12708706094b985ec5911c9fd2a097edfcdd79440aa089a2141c746a4bfd817
 MISC metadata.xml 296 SHA256 99687144efc36586c7f5aa897107c38c9efff985ac77e6e555d9f5f9ff0490ff SHA512 f81ae448ab1a0c422d6ca54a6611c63742387e13174b8b37ff8a114ad715c75d57fc6d490c9f73a8513f5a810436048d4188ad1def72f686a04c0b277a9d9c61 WHIRLPOOL 4e79826481a9e21662b853a587b3020a8ef9f1fe3a30f25ba83c1983f52b919288eb3f705232e4eeead76f6f1f631b0bc281093a01ba3f97465c098c6c7e97cb
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (Darwin)
+Version: GnuPG v1.4.10 (GNU/Linux)
 
-iEYEAREIAAYFAlLzxmwACgkQX3X2B8XHTolJHgCfeNauD1mWbzAXvkDeHay5Bm3U
-mxQAn0i+Iab80136x0ex9MkCbPW3oJnQ
-=n7Kl
+iQIcBAEBCAAGBQJS+9IlAAoJEMcu9QQQ+wFrSUgQAJ9gqwB/6VcBn7khqbdj+i50
+t5EY0pKnF3HlALg74NXdUEOl1gRMAgj2vEHk19JWqlhuN1Qha33q57m7orK6SW7e
+wCCn0Gi1ko6QO8xLvll+3vd94tpwNKbVXpmr+kvODb7pvkMbG+Y7DDkJ2KSQjivw
+zyNi+BbRSVxmMBKvK72mvyaaZYyYuYBCBU49XoiA8IPDOn1J37u5LbVXqCXvT6LU
+VUdvxqzNpKJl476M8+blmq1zXsdgdfnyIoIiaIRB1/H0B+As0l4QnHdtTijwt38a
+zfjatr5LFAcILYH0oI5IM+L2yjJ21pekdxMaI0nHuUJbU6xQbEoVGKlATlor8C8+
+bXvUG/38R33suF53oET+X5EmQFdJFANXWxjrImch6n2pJK7uXYOMRj9nCROUWzby
+GKtPJeP4MbWY7/4F14vJSpqkOvrhcHWfVjOHELufugvPgePGB3Zd8Yd9yQ4jVM1H
+dbFozjp32iCACfgu2nNYj7HLc7cNdtFbx7aJsRdpZqv0Gc10kH0wyIRkFT3omner
+1CRkLaHYNDhzUN6DR6XmP8HVN5zKYI9AUBxTdGf/NzvtSK3GBWX22IfnS3gG9S8a
+cyQ2EiqhutYAGAWLKflEqV1r9ToIALqbQEo7e8LgQDyDSq97qhU4t2a/SaBV9rMs
+LULzMunCvCglLSVgb7Xp
+=Z/Lx
 -----END PGP SIGNATURE-----
