@@ -1,18 +1,18 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/baselayout-prefix/baselayout-prefix-2.2-r3.ebuild,v 1.5 2014/02/06 17:29:03 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/baselayout-prefix/baselayout-prefix-2.2-r3.ebuild,v 1.6 2014/02/12 19:57:23 redlizard Exp $
 
 EAPI=3
 
 inherit eutils multilib libtool
 
 MY_P=${P/-prefix/}  # just use "upstream" sources
-EINFO=einfo-1.0.5
+EINFO=einfo-1.0.6
 DESCRIPTION="Minimal baselayout and e-functions for Gentoo Prefix installs"
 HOMEPAGE="http://www.gentoo.org/"
 SRC_URI="mirror://gentoo/${MY_P}.tar.bz2
 	http://dev.gentoo.org/~vapier/dist/${MY_P}.tar.bz2
-	http://dev.gentoo.org/~grobian/distfiles/${EINFO}.tar.xz"
+	http://dev.gentoo.org/~redlizard/distfiles/${EINFO}.tar.xz"
 
 LICENSE="GPL-2"
 SLOT="0"
