@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/baselayout-prefix
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/baselayout-prefix/ChangeLog,v 1.36 2014/02/06 17:29:03 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/baselayout-prefix/ChangeLog,v 1.37 2014/02/12 19:57:23 redlizard Exp $
+
+  12 Feb 2014; redlizard <redlizard@gentoo.org> baselayout-prefix-2.2-r3.ebuild:
+  Bump einfo version for fixes for platforms without visibility(hidden) support.
 
   06 Feb 2014; Fabian Groffen <grobian@gentoo.org>
   baselayout-prefix-2.2-r3.ebuild:
